--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -113,7 +113,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Symetric Structures in Discrete Geometry</h4>
+                                                <h4>Symmetric Structures in Discrete Geometry</h4>
                                                 Room 5
                                             </div>
                                         </div>
@@ -236,7 +236,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Symetric Structures in Discrete Geometry</h4>
+                                                <h4>Symmetric Structures in Discrete Geometry</h4>
                                                 Room 5
                                             </div>
                                         </div>
@@ -594,7 +594,7 @@
                     </div>
                     </br>
 
-                    <div class="special-session-b"><strong>Symetric Structures in Discrete Geometry</strong><br>
+                    <div class="special-session-b"><strong>Symmetric Structures in Discrete Geometry</strong><br>
                         <small>Asia Ivic Weiss ( York Univ.), Daniel Pellicer (CCM), Egon Schulte (NE University, Boston)</small> <br>
                         <small>pellicer<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</small><br>
                     </div>
