--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -45,6 +45,90 @@
         <p class="oaxaca-p"><ins>Each participant should reserve the hotel.</ins></p>
 
 
+        <div class="row">
+
+            <div class="col-lg-6">
+                <h4><a href="http://www.hotelvictoriaoax.com.mx" target="_blank">HOTEL VICTORIA OAXACA </a></h4>
+                <p class="oaxaca-p">Contact: Rosalba Morales <br>
+                    grupos<i class="fa fa-at"></i>hotelvictoriaoax.com.mx<br>
+
+                </p>
+                <p class="oaxaca-p">
+                    1 Adult: $ 1200.00<br>
+                    2 Adults: $ 1390.00<br>
+                    3 Adults: $ 1,800.00<br>
+                    4 Adults: $ 2,230.00<br>
+                    Includes: $ Buffet Breakfast<br>
+                    Promotional Code: Congreso PRIMA 2017
+                </p>
+
+            </div>
+
+
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <h4><a href="http://www.misiondelosangeles.com">MISIÓN DE LOS ÁNGELES</a></h4>
+                <p class="oaxaca-p"> Contact: Lic. Nancy Cruz <br>
+
+                    booking: grupos<i class="fa fa-at"></i>misiondelosangeles.com<br>
+
+                </p>
+
+                <p class="oaxaca-p">
+                    1 Adult: $ 1200.00<br>
+                    2 Adults: $ 1390.00<br>
+                    3 Adults: $ 1,800.00<br>
+                    4 Adults: $ 2,230.00<br>
+                    Includes: $ Buffet Breakfast<br>
+                    Promotional Code: Congreso PRIMA 2017
+                </p>
+
+            </div>
+
+            <div class="col-lg-6">
+                <h4><a href="http://www.hotelfortinplaza.com.mx" target="_blank">HOTEL FORTÍN PLAZA</a></h4>
+                <p class="oaxaca-p"> Contact: Lic. Isela Matadamas <br>
+
+                    booking: grupos<i class="fa fa-at"></i>hotelfortinplaza.com.mx<br>
+                </p>
+
+                <p class="oaxaca-p">
+                    1 Adult: $ 1200.00<br>
+                    2 Adults: $ 1390.00<br>
+                    3 Adults: $ 1,800.00<br>
+                    4 Adults: $ 2,230.00<br>
+                    Includes: $ Buffet Breakfast<br>
+                    Promotional Code: Congreso PRIMA 2017
+                </p>
+            </div>
+
+            <div class="col-lg-6">
+                <h4><a href="http://www.hotelangelinn.com" target="_blank">HOTEL ANGEL INN</a></h4>
+                <p class="oaxaca-p"> Contact: Lic. Rocío Cruz <br>
+
+                    booking: reservas_hai<i class="fa fa-at"></i>hotelangelinn.com<br>
+                </p>
+
+                <p class="oaxaca-p">
+                    1 Adult: $ 1200.00<br>
+                    2 Adults: $ 1390.00<br>
+                    3 Adults: $ 1,800.00<br>
+                    4 Adults: $ 2,230.00<br>
+                    Includes: $ Buffet Breakfast<br>
+                    Promotional Code: Congreso PRIMA 2017
+                </p>
+            </div>
+        </div>
+
+        <p class="oaxaca-p">
+            All rates are in MXN.<br>
+            All rates and discounts are subject to availability.<br>
+            Don´t include tips.<br>
+        </p>
+
+
 {#
         <div class="row">
 
