--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -619,7 +619,7 @@
                     </br>
 
                     <div class="special-session-b"><strong>Advances in Geometric Methods in Mechanics with Applications</strong><br>
-                        <small>Luis García Naranjo (UNAM), Vakhtang Putkaradza (Alberta), Dmitry Zenkov (NCSU)</small> <br>
+                        <small>Antonio Hernández Garduño (UAM - Iztapalapa), Vakhtang Putkaradza (Alberta), Dmitry Zenkov (NCSU)</small> <br>
                         <small>putkarad<i class="fa fa-at" aria-hidden="true"></i>ualberta.ca</small><br>
                     </div>
                     </br>
