Hoteles y mapa Oaxaca

--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -61,32 +61,7 @@
                     Includes: $ Buffet Breakfast<br>
                     Promotional Code: Congreso PRIMA 2017
                 </p>
-
             </div>
-
-
-        </div>
-
-        <div class="row">
-            <div class="col-lg-6">
-                <h4><a href="http://www.misiondelosangeles.com">MISIÓN DE LOS ÁNGELES</a></h4>
-                <p class="oaxaca-p"> Contact: Lic. Nancy Cruz <br>
-
-                    booking: grupos<i class="fa fa-at"></i>misiondelosangeles.com<br>
-
-                </p>
-
-                <p class="oaxaca-p">
-                    1 Adult: $ 1200.00<br>
-                    2 Adults: $ 1390.00<br>
-                    3 Adults: $ 1,800.00<br>
-                    4 Adults: $ 2,230.00<br>
-                    Includes: $ Buffet Breakfast<br>
-                    Promotional Code: Congreso PRIMA 2017
-                </p>
-
-            </div>
-
             <div class="col-lg-6">
                 <h4><a href="http://www.hotelfortinplaza.com.mx" target="_blank">HOTEL FORTÍN PLAZA</a></h4>
                 <p class="oaxaca-p"> Contact: Lic. Isela Matadamas <br>
@@ -103,7 +78,25 @@
                     Promotional Code: Congreso PRIMA 2017
                 </p>
             </div>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-6">
+                <h4><a href="http://www.misiondelosangeles.com">MISIÓN DE LOS ÁNGELES</a></h4>
+                <p class="oaxaca-p"> Contact: Lic. Nancy Cruz <br>
+
+                    booking: grupos<i class="fa fa-at"></i>misiondelosangeles.com<br>
+
+                </p>
+                <p class="oaxaca-p">
+                    1 Adult: $ 1200.00<br>
+                    2 Adults: $ 1390.00<br>
+                    3 Adults: $ 1,800.00<br>
+                    4 Adults: $ 2,230.00<br>
+                    Includes: $ Buffet Breakfast<br>
+                    Promotional Code: Congreso PRIMA 2017
+                </p>
+            </div>
             <div class="col-lg-6">
                 <h4><a href="http://www.hotelangelinn.com" target="_blank">HOTEL ANGEL INN</a></h4>
                 <p class="oaxaca-p"> Contact: Lic. Rocío Cruz <br>
@@ -128,98 +121,8 @@
             Don´t include tips.<br>
         </p>
 
-
-{#
-        <div class="row">
-
-            <div class="col-lg-6">
-                <h4><a href="http://www.hotelvictoriaoax.com.mx" target="_blank">HOTEL VICTORIA OAXACA (SEDE)</a></h4>
-                <p class="oaxaca-p">Carretera Internacional Km. 545 Col. Figueroa C. P. 68070 Oaxaca, Oaxaca México<br>
-                    Tel: +52 (951) 502 0850 (calls from Mexico also: 01 (800) 714 3720)<br>
-                    Fax: +52 (951) 515 2411<br>
-                    <a href="http://www.hotelvictoriaoax.com.mx">www.hotelvictoriaoax.com.mx</a><br>
-                    Contact: Rosalba Morales / Brenda García<br>
-                    rosalba<i class="fa fa-at"></i>hotelvictoriaoax.com.mx<br>
-                    reservaciones<i class="fa fa-at"></i>hotelvictoriaoax.com.mx
-                </p>
-                <p class="oaxaca-p">
-                    Single: $ 952.00<br>
-                    Double: $ 952.00<br>
-                    Single junior suite: $ 1,190.00<br>
-                    Double junior suite: $ 1,190.00<br>
-                    Additional guest: $ 238.00<br>
-                </p>
-
-            </div>
-            <div class="col-lg-6">
-                <h4><a href="http://www.casadelosfrailes.com" target="_blank" >HOTEL CASA DE LOS FRAILES</a></h4>
-                <p class="oaxaca-p">Constitución No. 203, Centro Histórico, Oaxaca, Oax.<br>
-                    +52-951-513 6670 / +52-951-514 6495<br>
-                    hotelcasadelosfrailes<i class="fa fa-at"></i>yahoo.com.mx<br>
-                    <a href="http://www.casadelosfrailes.com" target="_blank" >www.casadelosfrailes.com</a>
-                </p>
-
-                <p class="oaxaca-p">
-                    Single $960.00<br>
-                    King size $1,180.00<br>
-                    King size special $1,260.00<br>
-                    Standard double $1,180.00 (up to 3 persons, 2 double beds)<br>
-                    Standard double special $1,260.00 (up to 3 persons, 2 double beds)<br>
-                    *Fourth person in double room: $150.00 extra<br>
-                    10% off for conference participants (subject to availability)<br>
-                </p>
-
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="col-lg-6">
-                <h4><a href="mailto:hostal@lanoria.com.mx">HOTEL HOSTAL DE LA NORIA</a></h4>
-                <p class="oaxaca-p"> Av. Hidalgo 918 Centro Oaxaca, Oax. 68000 México<br>
-                    booking: hostal<i class="fa fa-at"></i>lanoria.com.mx<br>
-                    Contact: Marícruz Oliva Antonio.<br>
-                    Tel. + 52-951-5015400 ext 402.<br>
-                    Calls from Mexico also: 01 800 2023920.<br>
-                    Fax: + 52-951-5163992.
-                </p>
-
-                <p class="oaxaca-p">
-                    Single $1,071.00<br>
-                    Souble $1,250.00<br>
-                    Tripple $3 1.1428<br>
-                    Single junior suite $1,368.50<br>
-                    Double junior suite $1,547.00<br>
-                    Tripple junior suite $1,725.50<br>
-                    Single suite $1,725.50<br>
-                    Double suite $ 2,023.00.<br>
-                    Conference discount ONLY available upon booking by email/phone.
-                </p>
-
-            </div>
-
-            <div class="col-lg-6">
-                <h4><a href="http://www.casaconzatti.com.mx" target="_blank">HOTEL CASA CONZATTI</a></h4>
-                <p class="oaxaca-p">
-                    Gómez Farias #218, Col Centro, Oaxaca, Oax., C.P. 68000, México.<br>
-                    +52-951- 513 85 00, calls from Mexico also 01 800 717 99 74<br>
-                    <a href="http://www.casaconzatti.com.mx" target="_blank">www.casaconzatti.com.mx</a>
-                </p>
-
-                <p class="oaxaca-p">
-                    single or double $1,050.00 (Continental breakfast included)<br>
-                    Contact: Guadalupe Acevedo Sánchez<br>
-                    hconzatti<i class="fa fa-at"></i>prodigy.net.mx
-                </p>
-            </div>
-        </div>
-
-        <p class="oaxaca-p">
-            All rates are in MXN.<br>
-            All rates and discounts are subject to availability.<br>
-            All rates are special for conference participants, please indicate this when booking.<br>
-        </p>
-#}
+        <div class="page-header text-center"><h2>Location<h2></div>
     </div>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1pgnFkDAQxZOke7oOhPo-3dnQujA&hl=en" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 {% endblock %}
