--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -42,6 +42,15 @@
         </div>
 
         <h4>Hotels</h4>
+        <p>LODGING, we have reserved several spaces in the following hotels at a special rate for PRIMA2017 participants, please
+            note that all     of these hotels have the same conditions (same rate with buffet breakfast included) use the
+            following RESERVATION CODE: CONGRESO PRIMA 2017</p>
+        <p class="oaxaca-p">
+            1 Adult: $ 1200.00<br>
+            2 Adults: $ 1390.00<br>
+            3 Adults: $ 1,800.00<br>
+            4 Adults: $ 2,230.00<br>
+        </p>
         <p class="oaxaca-p"><ins>Each participant should reserve the hotel.</ins></p>
 
 
@@ -53,29 +62,13 @@
                     grupos<i class="fa fa-at"></i>hotelvictoriaoax.com.mx<br>
 
                 </p>
-                <p class="oaxaca-p">
-                    1 Adult: $ 1200.00<br>
-                    2 Adults: $ 1390.00<br>
-                    3 Adults: $ 1,800.00<br>
-                    4 Adults: $ 2,230.00<br>
-                    Includes: $ Buffet Breakfast<br>
-                    Promotional Code: Congreso PRIMA 2017
-                </p>
+
             </div>
             <div class="col-lg-6">
                 <h4><a href="http://www.hotelfortinplaza.com.mx" target="_blank">HOTEL FORTÍN PLAZA</a></h4>
                 <p class="oaxaca-p"> Contact: Lic. Isela Matadamas <br>
 
                     booking: grupos<i class="fa fa-at"></i>hotelfortinplaza.com.mx<br>
-                </p>
-
-                <p class="oaxaca-p">
-                    1 Adult: $ 1200.00<br>
-                    2 Adults: $ 1390.00<br>
-                    3 Adults: $ 1,800.00<br>
-                    4 Adults: $ 2,230.00<br>
-                    Includes: $ Buffet Breakfast<br>
-                    Promotional Code: Congreso PRIMA 2017
                 </p>
             </div>
         </div>
@@ -88,29 +81,12 @@
                     booking: grupos<i class="fa fa-at"></i>misiondelosangeles.com<br>
 
                 </p>
-                <p class="oaxaca-p">
-                    1 Adult: $ 1200.00<br>
-                    2 Adults: $ 1390.00<br>
-                    3 Adults: $ 1,800.00<br>
-                    4 Adults: $ 2,230.00<br>
-                    Includes: $ Buffet Breakfast<br>
-                    Promotional Code: Congreso PRIMA 2017
-                </p>
             </div>
             <div class="col-lg-6">
                 <h4><a href="http://www.hotelangelinn.com" target="_blank">HOTEL ANGEL INN</a></h4>
                 <p class="oaxaca-p"> Contact: Lic. Rocío Cruz <br>
 
                     booking: reservas_hai<i class="fa fa-at"></i>hotelangelinn.com<br>
-                </p>
-
-                <p class="oaxaca-p">
-                    1 Adult: $ 1200.00<br>
-                    2 Adults: $ 1390.00<br>
-                    3 Adults: $ 1,800.00<br>
-                    4 Adults: $ 2,230.00<br>
-                    Includes: $ Buffet Breakfast<br>
-                    Promotional Code: Congreso PRIMA 2017
                 </p>
             </div>
         </div>
