--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -241,7 +241,7 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading"><a href="">Maryam Mirzajani</a></h4>
+                        <h4 class="media-heading"><a href="">Maryam Mirzakhani </a></h4>
                         <p>Stanford</p>
                         <p><small><em>Teichmuller theory, hyperbolic geometry</em></small></p>
                         <p>
