--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -103,7 +103,7 @@
 
         <div class="page-header text-center"><h2>Scientific Committee<h2></div>
         <div align="center">
-            <div><h4>Maria ChudnovskyS <br><small>Columbia University</small></h4></div>
+            <div><h4>Maria Chudnovsky <br><small>Columbia University</small></h4></div>
             <div><h4>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h4></div>
             <div><h4>Peter Sarnak <br><small>Princeton</small></h4></div>
             <div><h4>Jongil Park <br><small>Seoul National University</small></h4></div>
