Actualizar menú registro

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -54,7 +54,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ app.request.basepath }}/program">Program</a></li>
-                <li><a href="#">Registration</a></li>
+                <li><a href="{{ app.request.basepath }}/registration">Registration</a></li>
                 <li><a href="{{ app.request.basepath }}/plenary-speakers">Plenary Speakers</a></li>
                 <li><a href="{{ app.request.basepath }}/financial-assistance">Financial Assistance</a></li>
                 <li><a href="{{ app.request.basepath }}/sponsors">Sponsors</a></li>
