- Banner registration/hotel - David Brydges adscription

--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -67,8 +67,8 @@
                     </div>
                     <div class="media-body plenary">
                         <h4 class="media-heading"><a href="http://www.math.ubc.ca/~db5d/">David Brydges</a></h4>
-                        <p>UCLA</p>
-                        <p><small><em>Number theory</em></small></p>
+                        <p>Professor emeritus <br>University of British Columbia</p>
+                        <p><small><em>Probability and mathematical physics</em></small></p>
                         <p>
                         </p>
                     </div>
