--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,42 +5,50 @@
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="img/alebrije-banner1.png" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>The Third Pacific Rim Mathematical Association (PRIMA) <br><small>Oaxaca, Mexico from August 14th till August 18th of 2017</small></h1>
-                {#<p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>#}
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item">
+                <img class="first-slide" src="img/alebrije-banner1.png" alt="First slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>The Third Pacific Rim Mathematical Association (PRIMA) <br><small>Oaxaca, Mexico from August 14th till August 18th of 2017</small></h1>
+                        {#<p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>#}
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>CALL FOR PROPOSALS FOR SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO<br><small>August 14-18 2017</small></h1>
-              <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal">Learn more</button></p>
+            <div class="item">
+                <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>CALL FOR PROPOSALS FOR SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO<br><small>August 14-18 2017</small></h1>
+                        <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal">Learn more</button></p>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="item active">
+                <img class="third-slide" src="img/banner3.png" alt="Third slide">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Registration and Hotel booking is now available</small></h1>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     <!-- /.carousel -->
-
 
     <!-- Modal -->
     <div class="modal fade " id="satelliteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
