- Focus google map - Logo SMM

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -8,7 +8,9 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+{#
             <li data-target="#myCarousel" data-slide-to="1"></li>
+#}
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
@@ -17,10 +19,11 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>The Third Pacific Rim Mathematical Association (PRIMA) <br><small>Oaxaca, Mexico from August 14th till August 18th of 2017</small></h1>
-                        {#<p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>#}
+                        <div class="page-header"></div>
                     </div>
                 </div>
             </div>
+{#
             <div class="item">
                 <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
                 <div class="container">
@@ -30,11 +33,13 @@
                     </div>
                 </div>
             </div>
+#}
             <div class="item active">
                 <img class="third-slide" src="img/banner3.png" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Registration and Hotel booking is now available</small></h1>
+                        <div class="page-header"></div>
                     </div>
                 </div>
             </div>
