--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -32,7 +32,7 @@
             <img src="img/cmo-logo.png" class="img-responsive logo">
             <img src="img/conacyt-logo.png" class="img-responsive logo">
             <img src="img/prima-logo.png" class="img-responsive logo">
-            <img src="img/sociedad-logo.png" class="img-responsive logo">
+            <img src="img/sociedad-m-logo.png" class="img-responsive logo">
         </div>
     </div>
 
