--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -101,7 +101,7 @@
                         <a href="http://www.primath.org/"><img src="{{ app.request.basepath }}/img/prima-logo.png" class="img-responsive logo"></a>
 
 
-                        <a href="http://www.smm.org.mx/"><img src="{{ app.request.basepath }}/img/sociedad-logo.png" class="img-responsive logo"></a>
+                        <a href="http://www.smm.org.mx/"><img src="{{ app.request.basepath }}/img/sociedad-m-logo.png" class="img-responsive logo"></a>
             </div>
             <div class="col-md-12">
                 <h1></h1>
