- Fuente slider - Quitar Kerry

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -38,7 +38,7 @@
                 <img class="third-slide" src="img/banner3.png" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Registration and Hotel booking is now available</small></h1>
+                        <h1><strong>Registration and Hotel booking<br>is now available</strong></h1>
                         <div class="page-header"></div>
                     </div>
                 </div>
