Current Trends in Symplectic Geometry and Topology

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -147,7 +147,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Geometry and Topology</h4>
+                                                <h4>Current Trends in Symplectic Geometry and Topology</h4>
                                                 {#Room 10#}
                                             </div>
                                         </div>
@@ -270,7 +270,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Geometry and Topology</h4>
+                                                <h4>Current Trends in Symplectic Geometry and Topology</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -376,7 +376,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Current Trends in Symplectic Geometry and Topology</h4>
+                                                <h4>Geometry and Topology</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -486,7 +486,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Current Trends in Symplectic Geometry and Topology</h4>
+                                                <h4>Geometry and Topology</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -588,7 +588,7 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and Topology</strong><br>
+                    <div class="special-session-a" ><strong>Geometry and Topology</strong><br>
                         <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
                         <small>andres_pedroza<i class="fa fa-at" aria-hidden="true"></i>ucol.mx</small><br>
                     </div>
