programa cambio de nombre de session

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -127,7 +127,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Nonlinear Elliptic PDE and Systems</h4>
+                                                <h4><a href="{{ app.request.basepath }}/sessions/nonlinear-elliptic-pde-and-systems">Nonlinear Elliptic PDE and Systems</a></h4>
                                                 {#Room 3#}
                                             </div>
                                         </div>
@@ -250,7 +250,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Nonlinear Elliptic PDE and Systems</h4>
+                                                <h4><a href="{{ app.request.basepath }}/sessions/nonlinear-elliptic-pde-and-systems">Nonlinear Elliptic PDE and Systems</a></h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -376,7 +376,8 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Geometry and Topology</h4>
+                                                <h4>Current Trends in Symplectic Geometry and
+                                                    Topology.</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -486,7 +487,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Geometry and Topology</h4>
+                                                <h4>Current Trends in Symplectic Geometry and Topology.</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -588,7 +589,8 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a" ><strong>Geometry and Topology</strong><br>
+                    <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and
+                            Topology.</strong><br>
                         <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
                         <small>andres_pedroza<i class="fa fa-at" aria-hidden="true"></i>ucol.mx</small><br>
                     </div>
@@ -624,7 +626,7 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a"><strong>Nonlinear Elliptic PDE and Systems</strong><br>
+                    <div class="special-session-a"><strong><a href="{{ app.request.basepath }}/sessions/nonlinear-elliptic-pde-and-systems">Nonlinear Elliptic PDE and Systems</a></strong><br>
                         <small>Nils Ackerman (IM) Du Yihong (Australia) Musso Monica (Chile) Tanaka Kazunaga (Japan)</small> <br>
                         <small>nils<i class="fa fa-at" aria-hidden="true"></i>ackermath.info</small><br>
                     </div>
@@ -672,7 +674,8 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a"><strong>Geometry and Topology</strong><br>
+                    <div class="special-session-a"><strong>Current Trends in Symplectic Geometry and
+                            Topology.</strong><br>
                         <small>Daniel Juan (CCM), Chris Connell (Indiana), Fuquan Fang (Capital Normal Univ. China)</small> <br>
                         <small>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</small><br>
                     </div>
