programa cambio de nombre de session

--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -233,6 +233,23 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="media">
+                    <div class="media-left media-top">
+                        <a href="#">
+                            <img class="media-object" src="img/speakers/Mariel-Vazquez.png" class="img-responsive img-thumbnail">
+                        </a>
+                    </div>
+                    <div class="media-body plenary">
+                        <h4 class="media-heading"><a href="http://biosci3.ucdavis.edu/Faculty/Profile/View/14487 "> Prof. Mariel Vazquez  </a></h4>
+                        <p>Universidad de California-Davis</p>
+                        <p><small><em>
+                                    Especialidad: Mathematical Biology </em></small></p>
+                        <p>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="page-header"></div>
     </div>
