--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -23,17 +23,17 @@
                     </div>
                 </div>
             </div>
-{#
+
             <div class="item">
                 <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>CALL FOR PROPOSALS FOR SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO<br><small>August 14-18 2017</small></h1>
-                        <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal">Learn more</button></p>
+                        <h1>visa information<br><small>August 14-18 2017</small></h1>
+                        <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal"><a href="http://www.inm.gob.mx/gobmx/word/index.php/paises-requieren-visa-para-mexico/">Mexican VISA</a></button></p>
                     </div>
                 </div>
             </div>
-#}
+
             <div class="item active">
                 <img class="third-slide" src="img/banner3.png" alt="Third slide">
                 <div class="container">
