--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -376,7 +376,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Current Trends in Symplectic Geometry and
+                                                <h4>Geometry and
                                                     Topology.</h4>
                                                 {#Room 5#}
                                             </div>
@@ -487,7 +487,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Current Trends in Symplectic Geometry and Topology.</h4>
+                                                <h4>Geometry and Topology.</h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -591,7 +591,7 @@
 
                     <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and
                             Topology.</strong><br>
-                        <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
+                        <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Kaoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
                         <small>andres_pedroza<i class="fa fa-at" aria-hidden="true"></i>ucol.mx</small><br>
                     </div>
                     </br>
@@ -674,7 +674,7 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a"><strong>Current Trends in Symplectic Geometry and
+                    <div class="special-session-a"><strong>Geometry and
                             Topology.</strong><br>
                         <small>Daniel Juan (CCM), Chris Connell (Indiana), Fuquan Fang (Capital Normal Univ. China)</small> <br>
                         <small>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</small><br>
