--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -8,9 +8,9 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-{#
+
             <li data-target="#myCarousel" data-slide-to="1"></li>
-#}
+
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class="page-header text-center"><h2>Scientific Committee<h2></div>
+        <div class="page-header text-center"><h2>Scientific Committee</h2></div>
         <div align="center">
             <div><h4>Maria Chudnovskygh <br><small>Columbia University</small></h4></div>
             <div><h4>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h4></div>
