--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -28,7 +28,7 @@
                 <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>visa information<br><small>August 14-18 2017</small></h1>
+                        <h1>visa information<br><small></small></h1>
                         <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal"><a href="http://www.inm.gob.mx/gobmx/word/index.php/paises-requieren-visa-para-mexico/">Mexican VISA</a></button></p>
                     </div>
                 </div>
