cambios en un plenario

--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -241,10 +241,9 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading"><a href="http://biosci3.ucdavis.edu/Faculty/Profile/View/14487 "> Prof. Mariel Vazquez  </a></h4>
-                        <p>Universidad de California-Davis</p>
-                        <p><small><em>
-                                    Especialidad: Mathematical Biology </em></small></p>
+                        <h4 class="media-heading"><a href="http://biosci3.ucdavis.edu/Faculty/Profile/View/14487 "> Mariel Vazquez  </a></h4>
+                        <p>UC-Davis</p>
+                        <p><small><em>Mathematical Biology </em></small></p>
                         <p>
                         </p>
                     </div>
