--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -52,7 +52,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1> Application for FINANCIAL ASSISTANCE  <br>is NOW  available!!!!"</h1>
-                        <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal"><a href="http://gaspacho.matmor.unam.mx/prima/financial/new ">click here</a></button></p>
+                        <p><button type="button" class="btn btn-primary btn-lg"><a href="http://gaspacho.matmor.unam.mx/prima/financial/new ">click here</a></button></p>
 
                         <div class="page-header"></div>
                     </div>
