--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -51,7 +51,9 @@
                 <img class="four-slide" src="img/banner4.png" alt="Four slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1> Application for FINANCIAL ASSISTANCE  <br>is NOW  available!!!!"</h1>
+                        <h1> Application for FINANCIAL ASSISTANCE  <br>is NOW  available!!!!
+                        <br> <h3>until April 30 2017</h3>
+                        </h1>
                         <p><a href="http://gaspacho.matmor.unam.mx/prima/financial/new" class="btn btn-primary btn-lg">click here</a></p>
 
                         <div class="page-header"></div>
