Nils Ackerman (IM) Jaeyoung Byeon (South Korea) Yihong Du (Australia) Monica Musso (Chile)

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -627,7 +627,7 @@
                     </br>
 
                     <div class="special-session-a"><strong><a href="{{ app.request.basepath }}/sessions/nonlinear-elliptic-pde-and-systems">Nonlinear Elliptic PDE and Systems</a></strong><br>
-                        <small>Nils Ackerman (IM) Du Yihong (Australia) Musso Monica (Chile) Tanaka Kazunaga (Japan)</small> <br>
+                        <small>Nils Ackerman (IM) Jaeyoung Byeon (South Korea) Yihong Du (Australia) Monica Musso (Chile) </small> <br>
                         <small>nils<i class="fa fa-at" aria-hidden="true"></i>ackermath.info</small><br>
                     </div>
                     </br>
